--- a/package.json
+++ b/package.json
@@ -3,18 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "cross-env": "^7.0.2",
-    "dotenv": "^8.2.0",
     "emailjs-com": "^2.4.1",
-    "env": "0.0.2",
     "pouchdb": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,6 +23,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "https://cors-anywhere.herokuapp.com/",
   "browserslist": {
     "production": [
       ">0.2%",
