--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-schedule": "^1.3.2",
     "nodemon": "^2.0.6",
     "sqlite3": "^5.0.0",
     "telegraf": "^3.38.0"
