--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "emailjs-com": "^2.4.1",
     "pouchdb": "^7.2.1",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.13.0",
-    "react-scripts": "^3.4.0",
+    "react-scripts": "^4.0.3",
     "telegraf": "^3.38.0"
   },
   "scripts": {
